feat: update endpoint for posts created
